[project]
name = "rag2"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.1",
    "ipykernel>=7.1.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-text-splitters>=1.0.0",
    "sentence-transformers>=5.2.0",
    "pypdf>=3.0.0",
]

